# civStation

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MANIFEST.in  Makefile  README.en.md  README.ko.md  README.md  README.zh.md  config.yaml  justfile  pyproject.toml
.claude/: settings.local.json
.codex/: config.toml
.codex/skills/computer-use-mcp/: SKILL.md
.github/: ISSUE_TEMPLATE.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  question.yml
.github/workflows/: docs.yml  test.yml
civStation/: __init__.py  __main__.py  cli.py
civStation/agent/: __init__.py  turn_executor.py  turn_runner.py
civStation/agent/models/: __init__.py  schema.py
civStation/agent/modules/: __init__.py
civStation/evaluation/: README.md  __init__.py
civStation/evaluation/dataset/: __init__.py
civStation/evaluation/evaluator/: __init__.py
civStation/evaluation/metric/: __init__.py
civStation/mcp/: README.md  __init__.py  civ6_mcp_adapters.py  client_templates.py  codec.py  install_client_assets.py  layer_contracts.py  runtime.py  server.py  session.py
civStation/utils/: __init__.py  image_pipeline.py  project_runtime.py  rich_logger.py  run_log_cache.py  screen.py  screenshot_trajectory.py  ui_benchmarking.py  ui_change_detector.py  utils.py
civStation/utils/chatapp/: __init__.py  base.py  discord_app.py  (+1 more)
computer-use-test/: HISTORY.md  README.md  justfile
computer-use-test/docs/: index.md  installation.md  usage.md
computer-use-test/tests/: test_computer_use_test.py
computer_use_test/: __init__.py  cli.py
computer_use_test/agent/: __init__.py  base_agent.py  evaluation_interface.py  turn_executor.py  turn_runner.py
computer_use_test/evaluation/: README.md  __init__.py
computer_use_test/mcp/: README.md  __init__.py  install_client_assets.py  runtime.py  server.py  session.py
computer_use_test/utils/: __init__.py  image_pipeline.py  project_runtime.py  rich_logger.py  run_log_cache.py  screen.py  screenshot_trajectory.py  ui_benchmarking.py  ui_change_detector.py  utils.py
docs/: index.ko.md  index.md  index.zh.md  installation.ko.md  installation.md  installation.zh.md  layered_mcp.ko.md  layered_mcp.md  layered_mcp.zh.md  mkdocs.local.yml  mkdocs.yml  usage.ko.md  usage.md  usage.zh.md
docs/archive/: ARCHITECTURE.md  CLAUDE.md  HISTORY.md  architecture-guide.ko.md  architecture-guide.md  architecture-guide.zh.md  implementation-summary.ko.md  implementation-summary.md  implementation-summary.zh.md
docs/concepts/: execution-loop.ko.md  execution-loop.md  execution-loop.zh.md  human-in-the-loop.ko.md  human-in-the-loop.md  human-in-the-loop.zh.md  layered-mcp.ko.md  layered-mcp.md  layered-mcp.zh.md  layers.ko.md  layers.md  layers.zh.md  mental-model.ko.md  mental-model.md  mental-model.zh.md  runtime-separation.ko.md  runtime-separation.md  runtime-separation.zh.md  why-civstation.ko.md  why-civstation.md  why-civstation.zh.md
docs/development/: contributing.ko.md  contributing.md  contributing.zh.md  extending-the-stack.ko.md  extending-the-stack.md  extending-the-stack.zh.md  release-notes.ko.md  release-notes.md  release-notes.zh.md  testing-and-quality.ko.md  testing-and-quality.md  testing-and-quality.zh.md
docs/getting-started/: first-live-run.ko.md  first-live-run.md  first-live-run.zh.md  installation.ko.md  installation.md  installation.zh.md  quickstart.ko.md  quickstart.md  quickstart.zh.md
docs/guides/: control-and-discussion.ko.md  control-and-discussion.md  control-and-discussion.zh.md  evaluation.ko.md  evaluation.md  evaluation.zh.md  mobile-qr-control.ko.md  mobile-qr-control.md  mobile-qr-control.zh.md  providers-and-image-pipeline.ko.md  providers-and-image-pipeline.md  providers-and-image-pipeline.zh.md  running-the-agent.ko.md  running-the-agent.md  running-the-agent.zh.md
docs/paper/: README.md  paper.bib  paper.md
docs/plans/: 2026-03-16-city-production-blue-placement-followup.ko.md  2026-03-16-city-production-blue-placement-followup.md  2026-03-16-city-production-blue-placement-followup.zh.md  2026-03-17-turn-runner-raw-log-cache-design.ko.md  2026-03-17-turn-runner-raw-log-cache-design.md  2026-03-17-turn-runner-raw-log-cache-design.zh.md  2026-03-17-turn-runner-raw-log-cache.ko.md  2026-03-17-turn-runner-raw-log-cache.md  2026-03-17-turn-runner-raw-log-cache.zh.md  2026-03-18-run-log-capture-design.ko.md  2026-03-18-run-log-capture-design.md  2026-03-18-run-log-capture-design.zh.md  2026-03-18-run-log-capture.ko.md  2026-03-18-run-log-capture.md  2026-03-18-run-log-capture.zh.md  2026-03-19-computer-use-providers-design.ko.md  2026-03-19-computer-use-providers-design.md  2026-03-19-computer-use-providers-design.zh.md  2026-03-19-computer-use-providers.ko.md  2026-03-19-computer-use-providers.md  2026-03-19-computer-use-providers.zh.md  2026-03-19-governor-secret-society-observation-trace.ko.md  2026-03-19-governor-secret-society-observation-trace.md  2026-03-19-governor-secret-society-observation-trace.zh.md
docs/reference/: cli.ko.md  cli.md  cli.zh.md  configuration.ko.md  configuration.md  configuration.zh.md  mcp-tools.ko.md  mcp-tools.md  mcp-tools.zh.md  project-layout.ko.md  project-layout.md  project-layout.zh.md
scripts/: sync_ecc_local.sh
tests/: __init__.py  test_cli.py  test_command_queue.py  test_macro_turn_manager.py  test_module_entrypoints.py  test_namespace_compatibility.py  test_relay_client.py  test_state_bridge.py
tests/agent/: test_action_models.py  test_turn_executor.py  test_turn_runner.py
tests/evaluator/: __init__.py
tests/mcp/: test_civ6_mcp_adapters.py  test_layered_server.py
tests/rough_test/: fully_autonomous_test.py  test_ocr_policy_extraction.py  test_rough_vlm.py  test_ui_benchmarking_helpers.py  test_vlm_policy_extraction.py
tests/utils/: test_anthropic_computer_provider.py  test_gemini_provider.py  test_openai_computer_provider.py  test_parser_scroll.py  test_run_log_cache.py  test_screen.py  test_screenshot_trajectory.py  test_strip_markdown_json.py  test_ui_change_detector.py
(+337 files in other folders)
